--- a/app/public/home.html
+++ b/app/public/home.html
@@ -34,7 +34,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="../api/friends">API Friends List</a> | <a href="https://github.com/ivergil/FriendFinder.git">GitHub Repo</a></p>
+        <p><a href="../api/friends">API Friends List</a> | <a href="https://github.com/ivergil/FriendFinder.git">GitHub Repo</a></a> | <a href="../public/home.html">Home</a></p>
       </div>
     </footer>
 
