--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -95,7 +95,7 @@
     </select>
 
 
-    <h3><strong>Question 6</strong></h3>
+    <!-- <h3><strong>Question 6</strong></h3>
     <h4>It is often difficult for you to relate to other people’s feelings.</h4>
     <select class="chosen-select" id="q6">
       <option value=""></option>
@@ -149,7 +149,7 @@
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select>
+    </select> -->
 
     <br>
     <br>
