--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,7 +19,7 @@
 
   <div class="container">
 
-    <div class="jumbotron">
+    <div class="jumbotron"  style="color:white; background-color:#5784e4">
       <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> My Friend Finder</h1>
       <hr>
       <h2>Answer 5 basic questions. </h2>
@@ -27,7 +27,7 @@
       <br>
 
       <div>
-        <a href="../survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Start</h4></button></a>
+        <a href="../survey"><button type="button" class="btn btn-lg btn-success"><h4><span class="glyphicon glyphicon-list-alt"></span> Start</h4></button></a>
       </div>
 
     </div>
