Best Match logic

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,7 @@
   <div class="container">
 
     <div class="jumbotron"  style="color:white; background-color:#5784e4">
-      <h1><i class="fa fa-binoculars" aria-hidden="true"></i> My Friend Finder <i class=" fa fa-binoculars" aria-hidden="true"></i></h1>
+      <h1 class= "text-center"><i class="fa fa-binoculars" aria-hidden="true"></i> <i class=" fa fa-male" aria-hidden="true"></i> My Friend Finder <i class=" fa fa-female" aria-hidden="true"></i> <i class=" fa fa-binoculars" aria-hidden="true"></i></h1>
       <hr>
       <h2>Answer 5 basic questions. </h2>
       <h2>Then find your Match!</h2>
