--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -191,11 +191,7 @@
             $("#q3").val(),
             $("#q4").val(),
             $("#q5").val(),
-            // $("#q6").val(),
-            // $("#q7").val(),
-            // $("#q8").val(),
-            // $("#q9").val(),
-            // $("#q10").val()
+           
           ]
         };
 
@@ -214,7 +210,7 @@
 
         });
       } else {
-        alert("Please fill out all fields before submitting!");
+        alert("Please fill out all fields !");
       }
     });
   </script>
